<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorProfile"
            android:translationZ="10dp"
            android:padding="10dp">
            <TextView
                android:id="@+id/tv_hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:fontFamily="@font/montserrat_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.20" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wahyu"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginStart="6dp"
                app:layout_constraintTop_toTopOf="@id/tv_hello"
                app:layout_constraintStart_toEndOf="@id/tv_hello"
                app:layout_constraintBottom_toBottomOf="@id/tv_hello"/>

            <TextView
                android:id="@+id/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_your_favorite_movie"
                android:fontFamily="@font/montserrat_medium"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/tv_hello"
                app:layout_constraintStart_toStartOf="parent"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btn_update"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_person"
                android:backgroundTint="@color/white"
                app:civ_circle_background_color="@color/colorProfile"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFFF"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/cv_profile"
        app:layout_constraintEnd_toEndOf="@+id/cv_profile"
        app:layout_constraintStart_toStartOf="@+id/cv_profile">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:tint="@color/colorAccent"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/cv_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_movie" />

        <TextView
            android:id="@+id/tv_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/movie"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/app"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_upcoming_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_movie"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/linear_tv"
        app:layout_constraintStart_toStartOf="@id/cv_profile"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_top_rated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_upcoming_movie"
        app:layout_constraintStart_toStartOf="@id/tv_upcoming_movie"
        app:layout_constraintEnd_toEndOf="@id/cv_profile"
        android:layout_marginHorizontal="20dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/item_content" />

    <TextView
        android:id="@+id/tv_popular_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_movie"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/rv_list_top_rated"
        app:layout_constraintStart_toStartOf="@id/cv_profile"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_popular_movie"
        app:layout_constraintStart_toStartOf="@id/tv_popular_movie"
        app:layout_constraintEnd_toEndOf="@id/cv_profile"
        android:layout_marginHorizontal="20dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/item_content" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>