<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.profile.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_back"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image_back" />

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_logout"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_logout" />

    <TextView
        android:id="@+id/tv_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/default_profile"
        app:civ_border_width="2dp"
        app:civ_border_color="#FFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_update"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="32dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:autofillHints="name"
        android:inputType="text"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="@color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_username"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="@color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="@color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_password"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/shape_button"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"/>

    <LinearLayout
        android:id="@+id/linear_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_update"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/movie"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tv_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/app"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </LinearLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/il_username"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:errorEnabled="true"-->
<!--        app:boxBackgroundColor="@color/white"-->
<!--        app:boxStrokeColor="@color/teal_700"-->
<!--        app:hintTextColor="@color/teal_700"-->
<!--        app:boxCornerRadiusBottomStart="20dp"-->
<!--        app:boxCornerRadiusTopEnd="20dp"-->
<!--        android:layout_marginHorizontal="32dp"-->
<!--        android:layout_marginTop="50dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/profile_image">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"-->
<!--            android:id="@+id/et_username"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/username"-->
<!--            android:textColor="@color/silver"/>-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/il_email"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:errorEnabled="true"-->
<!--        app:boxBackgroundColor="@color/white"-->
<!--        app:boxStrokeColor="@color/teal_700"-->
<!--        app:hintTextColor="@color/teal_700"-->
<!--        app:boxCornerRadiusBottomStart="20dp"-->
<!--        app:boxCornerRadiusTopEnd="20dp"-->
<!--        android:layout_marginHorizontal="32dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/il_username">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/et_email"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/email" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/il_password"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:errorEnabled="true"-->
<!--        app:boxBackgroundColor="@color/white"-->
<!--        app:boxStrokeColor="@color/teal_700"-->
<!--        app:hintTextColor="@color/teal_700"-->
<!--        app:boxCornerRadiusBottomStart="20dp"-->
<!--        app:boxCornerRadiusTopEnd="20dp"-->
<!--        android:layout_marginHorizontal="32dp"-->
<!--        app:endIconMode="password_toggle"-->
<!--        app:layout_constraintTop_toBottomOf="@id/il_email">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/et_password"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/password"-->
<!--            android:inputType="textPassword"/>-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/btn_update"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_marginHorizontal="32dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/update"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="18sp"-->
<!--        android:background="@drawable/shape_button"-->
<!--        app:cornerRadius="16dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/il_password"-->
<!--        android:layout_marginTop="16dp"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>